# OLMap

./: .editorconfig  .env.dev  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  .yamllint  CLAUDE.md  DEPENDENCY_ANALYSIS.md  LICENSE.md  Makefile  Pipfile  README.md  SECURITY_ANALYSIS.md  TESTING.md  docker-compose.yml  justfile  pyproject.toml  release-please-config.json  skaffold.yaml
city_logistics_ui/: package.json
deploy/: README.md  backend-values.yaml  frontend-values.yaml
django_server/: .coveragerc  CHANGELOG.md  Dockerfile  Pipfile  entrypoint.sh  fix_opening_hours.py  manage.py  pyproject.toml  tox.ini  update_image_note_links.py
django_server/city_logistics/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
django_server/drf_jsonschema/: __init__.py  convert.py  converters.py  fields.py  setup.py  test_settings.py
django_server/fvh_courier/: admin.py  apps.py  models.py  rest.py  tests.py
django_server/fvh_courier/migrations/: 0001_initial.py  0001_squashed_0051_auto_20201217_1340.py  0002_add_user_groups.py  0003_userlocation.py  0004_auto_20191216_1331.py  0005_package_uuid.py  0006_packagesms.py  0007_osmfeature_osmimagenote.py  0008_auto_20200124_1211.py  0009_auto_20200124_1228.py  0010_auto_20200205_0723.py  0011_add_reviewer_group.py  0012_auto_20200218_1512.py  0013_auto_20200220_1039.py  0014_auto_20200220_1427.py  0015_add_sender_group.py  0016_auto_20200309_1014.py  0017_imagenotedownvote_imagenoteupvote.py  0018_osmimagenotecomment.py  0019_osmfeature_associated_entrances.py  0020_auto_20200327_0955.py  0021_auto_20200331_1502.py  0022_auto_20200331_1517.py  0023_auto_20200401_0956.py  0024_package_delivery_instructions.py  0025_auto_20200402_1257.py  0026_auto_20200403_0832.py  0027_auto_20200406_0902.py  0028_auto_20200427_0613.py  0029_auto_20200506_1325.py  0030_populate_courier_models.py  0031_auto_20200507_0751.py  0032_auto_20200507_0754.py  0033_auto_20200508_0729.py  0034_delete_userlocation.py  0035_ignoredholviproduct_requiredholviproduct.py  0036_auto_20200601_1323.py  0037_infoboard.py  0038_osmimagenote_processed_by.py  0039_auto_20200626_1613.py  (+12 more)
django_server/fvh_courier/models/: __init__.py  base.py  courier_models.py  holvi_package_models.py  image_note_properties.py  image_note_tags.py  osm_image_notes.py  package_models.py  phone_number.py  tests.py  user_location.py
django_server/fvh_courier/rest/: __init__.py  permissions.py  serializers.py  views.py
django_server/fvh_courier/rest/tests/: __init__.py  available_packages_tests.py  base.py  osm_image_note_properties_tests.py  osm_image_notes_tests.py  outgoing_packages_tests.py  reserved_packages_tests.py  rest_tests.py
django_server/holvi_orders/: admin.py  apps.py  models.py  serializers.py  signals.py  test_data.py  tests.py  views.py
django_server/holvi_orders/migrations/: 0001_initial.py  0002_auto_20200331_1347.py  0003_auto_20200604_0912.py
django_server/olmap/: admin.py  apps.py  health.py  utils.py
django_server/olmap/migrations/: 0001_squashed_0051_auto_20201217_1340.py  0002_osmimagenotecommentnotification.py  0003_notify_comments.py  0004_workplace_workplacetype.py  0005_add_workplace_types.py  0006_remove_unofficial_addresses.py  0007_auto_20210506_1604.py  0008_auto_20210507_1541.py  0009_osmimagenote_addresses.py  0010_alter_address_postal_code.py  0010_link_image_note_addresses.py  0011_auto_20210512_1138.py  0012_auto_20210512_1307.py  0013_auto_20210526_1848.py  0014_auto_20210528_1414.py  0015_unloadingplace_access_points.py  0016_osmimagenote_accepted_by.py  0017_auto_20210609_1021.py  0018_buildingpassage.py  0019_auto_20211020_1226.py  0020_workplace_max_vehicle_height.py  0021_remove_workplace_url_name.py  0022_auto_20211220_1132.py  0023_gate_ref.py  0024_osmimagenote_layer.py  0025_populate_layer_field.py  0026_auto_20220308_1304.py  0027_alter_address_postal_code.py
django_server/olmap/models/: __init__.py  base.py  image_note_properties.py  map_features.py  osm_image_notes.py  tests.py
django_server/olmap/rest/: __init__.py  permissions.py  schema.py  serializers.py  views.py
django_server/olmap/rest/serializers/: __init__.py  address.py  base.py  google_translation.py  map_features.py  osm_features.py  osm_image_note.py  password_reset.py  rounding_decimal_field.py  user.py  workplace_wizard.py
django_server/olmap/rest/tests/: __init__.py  base.py  map_feature_tests.py  osm_image_note_properties_tests.py  osm_image_notes_tests.py  rest_tests.py
django_server/olmap/rest/views/: __init__.py  address.py  map_features.py  osm_features.py  osm_image_note.py  recent_mappers.py  search.py
django_server/olmap_config/: admin_site.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
django_server/templates/: swagger-ui.html
django_server/templates/admin/: base_site.html
django_server/templates/registration/: password_reset_email.html
docs/: DEPENDENCY_ANALYSIS.md  PRD-pipenv-to-uv-migration.md  TESTING.md
k8s/: README.md
react_ui/: .eslintrc.js  CHANGELOG.md  Dockerfile  biome.json  docker-entrypoint.sh  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  run-e2e-tests.sh
scripts/: compare_osoitehaavi_entrances.py  entrances_with_address.sample.geojson  (+3 more)
(+284 files in other folders)
