[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olmap"
version = "0.2.1"
description = "Open Logistics Map - Geospatial web application for logistics-related geographical features"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OLMap Development Team"}
]
keywords = ["django", "gis", "openstreetmap", "logistics", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.10,<4.0",
    "pyaml>=19.4,<25.0",
    "uritemplate>=3.0,<5.0",
    "coreapi>=2.3,<3.0",
    "django-cors-headers>=3.2,<5.0",
    "dj-rest-auth>=2.0,<7.0",
    "django-allauth>=65.0,<66.0",
    "jsonschema>=3.2,<5.0",
    "twilio>=9.0,<10.0",
    "psycopg2-binary>=2.9,<3.0",
    "Pillow>=7.0,<12.0",
    "dj-inmemorystorage>=2.0,<3.0",
    "gunicorn>=20.0,<24.0",
    "sentry-sdk>=2.0,<3.0",
    "geocoder>=1.38,<2.0",
    "smsframework_gatewayapi",
    "elastic-apm>=5.5,<7.0",
    "geopy>=2.0,<3.0",
    "pyproj>=2.6.1,<4.0",
    "overpy>=0.4,<1.0",
    "django-rename-app>=0.1,<1.0",
    "shapely>=1.7,<3.0",
    "google-cloud-translate>=3.0,<4.0",
    "ruff>=0.8.0,<1.0",
    "coverage>=5.0,<8.0",
    "inflection>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["olmap*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "N806",  # Allow non-lowercase variable names (common in Django migrations, PIL usage)
]

[tool.ruff.lint.per-file-ignores]
"migrations/*.py" = ["E501", "N806", "F401"]
"__init__.py" = ["F401"]
"**/tests/__init__.py" = ["F403"]
"fix_*.py" = ["E402"]
"update_*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
